Orden de compras funcionando

--- a/Pages/Consultas/C_Suplidor.razor
+++ b/Pages/Consultas/C_Suplidor.razor
@@ -1,6 +1,6 @@
 @page "/c_suplidor"
 @*--------- Consulta suplidor ---------*@
-@using Models;
+
 @using ProyectoFinal.BLL
 
 <EditForm Model="suplidor">
@@ -88,7 +88,7 @@
                     </th>
 
                     <th>
-                        Categoria de articulo
+                        Descripción de suplidor
                         <div class="oi oi-credit-breack"></div>
                     </th>
 
