--- a/Pages/Consultas/ConsultarVentas.razor
+++ b/Pages/Consultas/ConsultarVentas.razor
@@ -9,7 +9,7 @@
 
 @inject IToastService Toast
 
-@using BLL
+@using ProyectoFinal.BLL;
 
 <EditForm Model="venta">
     <DataAnnotationsValidator />
