--- a/Pages/Consultas/ConsultarCrompras.razor
+++ b/Pages/Consultas/ConsultarCrompras.razor
@@ -8,7 +8,7 @@
 
 @inject IToastService Toast
 
-@using BLL
+@using ProyectoFinal.BLL;
 
 <EditForm Model="articulo">
     <DataAnnotationsValidator />
