--- a/Pages/Consultas/Reporte_Articulos.razor
+++ b/Pages/Consultas/Reporte_Articulos.razor
@@ -1,7 +1,7 @@
 @page "/reportearticulos"
 
 @*--------- Consulta Articulos ---------*@
-@using Models;
+
 @using ProyectoFinal.BLL;
 
 <EditForm Model="lista">
@@ -20,10 +20,11 @@
                         </svg></label>
     </a>
 
-     <a type="button" class="rz-border-radius-0 shadow border border-2 btn-lg btn btn-success" data-toggle="tooltip"
+     <a type="button" class="rz-border-radius-0 shadow border border-2 btn-lg btn btn-Inventario" data-toggle="tooltip"
        data-placement="right" title="Ingresar al Inventario" href="inventario">
-        <label>Inventario <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-shop" viewBox="0 0 16 16">
-                            <path d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z" />
+        <label>Inventario <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-minecart-loaded" viewBox="0 0 16 16">
+                            <path d="M4 15a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0 1a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8-1a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0 1a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM.115 3.18A.5.5 0 0 1 .5 3h15a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 14 12H2a.5.5 0 0 1-.491-.408l-1.5-8a.5.5 0 0 1 .106-.411zm.987.82 1.313 7h11.17l1.313-7H1.102z"/>
+                            <path fill-rule="evenodd" d="M6 1a2.498 2.498 0 0 1 4 0c.818 0 1.545.394 2 1 .67 0 1.552.57 2 1h-2c-.314 0-.611-.15-.8-.4-.274-.365-.71-.6-1.2-.6-.314 0-.611-.15-.8-.4a1.497 1.497 0 0 0-2.4 0c-.189.25-.486.4-.8.4-.507 0-.955.251-1.228.638-.09.13-.194.25-.308.362H3c.13-.147.401-.432.562-.545a1.63 1.63 0 0 0 .393-.393A2.498 2.498 0 0 1 6 1z"/>
                         </svg></label>
     </a>
     <br/>
@@ -58,6 +59,8 @@
                 <th class="border border-3">Cantidad Aumentada</th>
 
                 <th class="border border-3">Costo</th>
+
+                <th class="border border-3">Ver</th>
             </tr>
             </thead>
             <tbody>
@@ -70,8 +73,7 @@
             {
                 @foreach (var item in lista)
                 {
-                        if(item.CantidadRegistrada > 0)
-                {
+                        
                     
                      descripcion = categoriaBLL.Buscar(item.CategoriaId);
                     if (descripcion == null) break;
@@ -89,8 +91,12 @@
 
                         <td class="border border-3">@item.Costo</td>
 
+                        <td>
+                            <a class="btn btn-sm btn-outline-primary oi oi-eye" href="consultararticulo/@item.ArticuloId"></a>
+                        </td>
+
                     </tr>
-                }
+                
             }
             }
             </tbody>
@@ -124,6 +130,8 @@
                 <th class="border border-3">Costo</th>
 
                 <th class="border border-3">Precio de venta</th>
+
+                <th class="border border-3">Ver</th>
             </tr>
             </thead>
             <tbody>
@@ -156,6 +164,9 @@
 
                         <td class="border border-3">@item.Precio</td>                    
                        
+                        <td>
+                            <a class="btn btn-sm btn-outline-primary oi oi-eye" href="consultarcompras2/@item.ArticuloId"></a>
+                        </td>
                     </tr>
                 }
             }
