Orden de compras funcionando

--- a/Pages/Consultas/C_Clientes.razor
+++ b/Pages/Consultas/C_Clientes.razor
@@ -9,11 +9,21 @@
 
     <a type="button" class="rz-border-radius-4 shadow border border-1 btn-lg btn btn-warning" data-toggle="tooltip"
         data-placement="right" title="Registrar nuevo cliente" href="clientes">
+        <label>+</label>
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-people-fill"
             viewBox="0 0 16 16">
             <path
                 d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z" />
         </svg>
+    </a>
+
+    <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-reporte" style="position: absolute;  right:40px; margin-right: 30; " data-toggle="tooltip"
+        data-placement="right" title="Reporte de clientes" href="reporteclientes">
+        
+        <label>Reporte </label><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-clipboard-check-fill" viewBox="0 0 16 16">
+  <path d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3Zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3Z"/>
+  <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1Zm6.854 7.354-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708Z"/>
+</svg>
     </a>
     <br />
     <p />
@@ -117,7 +127,7 @@
             <tbody>
                 @if (lista.Count == 0)
                 {
-                    <span>Empty</span>
+                    <td class="bg-colornohay">ㅤNo hay clientes registrados !</td>
                 }
                 else
                 {
