--- a/Pages/Consultas/Reporte_Clientes.razor
+++ b/Pages/Consultas/Reporte_Clientes.razor
@@ -79,8 +79,7 @@
             <tbody>
                 @if (lista.Count == 0)
                 {
-                    <p />
-                    <span>Empty</span>
+                    <td class="bg-colornohay">ㅤNo hay clientes registrados !</td>
                 }
                 else
                 {
