--- a/Pages/Registros/R_Suplidor.razor
+++ b/Pages/Registros/R_Suplidor.razor
@@ -240,7 +240,7 @@
             }
             else
             {
-                Toast.ShowError($"Supldor: {suplidor.Nombre}, pertenece a otra persona");
+                Toast.ShowError($"{suplidor.Nombre}, ya se encuentra registrado");
             }
         }
     }
