--- a/Pages/Consultas/C_Articulos.razor
+++ b/Pages/Consultas/C_Articulos.razor
@@ -7,9 +7,19 @@
 
     <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-warning" data-toggle="tooltip"
        data-placement="right" title="Registrar nuevo producto" href="articulo">
+       <label>+</label>
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
                               </svg>
+    </a>
+
+    <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-reporte" style="position: absolute;  right:40px; margin-right: 30; " data-toggle="tooltip"
+        data-placement="right" title="Reporte de articulos" href="reportearticulos">
+        
+        <label>Reporte </label><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-clipboard-check-fill" viewBox="0 0 16 16">
+  <path d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3Zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3Z"/>
+  <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1Zm6.854 7.354-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708Z"/>
+</svg>
     </a>
     <br/>
     <p/>
@@ -96,7 +106,7 @@
 
             @if (lista.Count == 0)
             {
-                <span>Empty</span>
+                <td class="bg-colornohay">ㅤNo hay articulos registrados !</td>
             }
             else
             {
@@ -121,7 +131,7 @@
 
                         <td>@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
                         <td>
-                            <a class="btn btn-sm btn-outline-primary oi oi-eye" href="consultarcompras/@item.ArticuloId"></a>
+                            <a class="btn btn-sm btn-outline-primary oi oi-eye" href="consultarcompras2/@item.ArticuloId"></a>
                         </td>
                     </tr>
                 }
