--- a/Pages/Consultas/C_Suplidor.razor
+++ b/Pages/Consultas/C_Suplidor.razor
@@ -7,11 +7,21 @@
 
     <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-warning" data-toggle="tooltip"
         data-placement="right" title="Registrar nuevo suplidor" href="suplidor">
+        <label>+</label>
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-truck"
             viewBox="0 0 16 16">
             <path
                 d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
         </svg>
+    </a>
+
+    <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-reporte" style="position: absolute;  right:40px; margin-right: 30; " data-toggle="tooltip"
+        data-placement="right" title="Reporte de suplidores" href="reportesuplidores">
+        
+        <label>Reporte </label><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-clipboard-check-fill" viewBox="0 0 16 16">
+  <path d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3Zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3Z"/>
+  <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1Zm6.854 7.354-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708Z"/>
+</svg>
     </a>
     <br 1/>
     <p />
@@ -39,7 +49,7 @@
                             <option value="1">Nombre</option>
                             <option value="2">Email</option>
                             <option value="3">Telefono</option>
-                            <option value="4">Descripción articulo</option>
+                            <option value="4">Descripción suplidor</option>
                         </InputSelect>
                     </div>
                     <div class="Form-group col-md-1"></div>
@@ -101,7 +111,8 @@
             <tbody>
                 @if (suplidorList.Count == 0)
                 {
-                    <span>Empty</span>
+                    
+                    <td class="bg-colornohay">ㅤNo hay suplidores registrados !</td>
                 }
                 else
                 {
