--- a/Pages/Consultas/C_Ventas.razor
+++ b/Pages/Consultas/C_Ventas.razor
@@ -10,9 +10,19 @@
 
     <a type="button" class="rz-border-radius-4 shadow border border-1 btn-lg btn btn-warning" data-toggle="tooltip"
        data-placement="right" title="Realizar nueva venta" href="ventas">
+       <label>+</label>
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-shop-window" viewBox="0 0 16 16">
                          <path d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h12V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zm2 .5a.5.5 0 0 1 .5.5V13h8V9.5a.5.5 0 0 1 1 0V13a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V9.5a.5.5 0 0 1 .5-.5z"/>
                              </svg>
+    </a>
+
+    <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-reporte" style="position: absolute;  right:40px; margin-right: 30; " data-toggle="tooltip"
+        data-placement="right" title="Reporte de ventas" href="reporteventas">
+        
+        <label>Reporte </label><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-clipboard-check-fill" viewBox="0 0 16 16">
+  <path d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3Zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3Z"/>
+  <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1Zm6.854 7.354-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708Z"/>
+</svg>
     </a>
     <br/>
     <p/>
@@ -89,18 +99,21 @@
 
                 <th>Total</th>
 
+                <th>Estado</th>
+
                 <th>Ver</th>
             </tr>
             </thead>
             <tbody>
             @if (lista.Count == 0)
             {
-                <span>Empty</span>
+                <td class="bg-colornohay">ㅤNo hay ventas registradas !</td>
             }
             else
             {
                 @foreach (var item in lista)
                 {
+                    if(item.EstadoDeLaVenta != string.Empty){
                     <tr>
                         <td>@item.VentaId</td>
 
@@ -114,11 +127,14 @@
 
                         <td>RD$ @item.Total</td>
 
+                        <td>@item.EstadoDeLaVenta</td>
+
                         <td>
                             <a class="btn btn-sm btn-outline-primary oi oi-eye" href="consultarventas/@item.VentaId"></a>
                         </td>
                     </tr>
                 }
+            }
             }
             </tbody>
         </table>
