--- a/Pages/Consultas/ConsultarCrompras.razor
+++ b/Pages/Consultas/ConsultarCrompras.razor
@@ -1,8 +1,8 @@
 @page "/consultarcompras"
 
-@page "/consultarcompras/{ArticuloId:int}"
+@page "/consultarcompras/{CompraId:int}"
 
-@* Registro de compras *@
+
 
 @inject AuthenticationStateProvider Authentication
 
@@ -10,217 +10,302 @@
 
 @using ProyectoFinal.BLL;
 
-<EditForm Model="articulo">
+<EditForm Model="compra" OnValidSubmit="Autorizar">
     <DataAnnotationsValidator />
 
-     
+    
 
-    <div class="form-group col-3">
-
-        <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip"
-       data-placement="right" title="Regresar a la consulta de productos" href="c_articulo">
+    <div class="container">
+         <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip"
+       data-placement="right" title="Regresar al reporte de compras" href="reportecompras">
         <i
             class="oi oi-arrow-circle-left"/>
     </a>
-        <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-Inventario"
-            style="position: absolute; top:0;  right:0; margin-right: 25px; margin-top: 75px;" data-toggle="tooltip"
-            data-placement="right" title="Inventario de articulos" href="inventario"><span>Inventario</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                class="bi bi-minecart-loaded" viewBox="0 0 16 16">
-                <path
-                    d="M4 15a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0 1a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8-1a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0 1a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM.115 3.18A.5.5 0 0 1 .5 3h15a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 14 12H2a.5.5 0 0 1-.491-.408l-1.5-8a.5.5 0 0 1 .106-.411zm.987.82 1.313 7h11.17l1.313-7H1.102z" />
-                <path fill-rule="evenodd"
-                    d="M6 1a2.498 2.498 0 0 1 4 0c.818 0 1.545.394 2 1 .67 0 1.552.57 2 1h-2c-.314 0-.611-.15-.8-.4-.274-.365-.71-.6-1.2-.6-.314 0-.611-.15-.8-.4a1.497 1.497 0 0 0-2.4 0c-.189.25-.486.4-.8.4-.507 0-.955.251-1.228.638-.09.13-.194.25-.308.362H3c.13-.147.401-.432.562-.545a1.63 1.63 0 0 0 .393-.393A2.498 2.498 0 0 1 6 1z" />
-            </svg>
-        </a>
-        <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-ordendecompra" data-toggle="tooltip"
-            data-placement="right" style="position: absolute; top:0;  right:0; margin-right: 200px; margin-top: 75px;" title="Realizar orden de compra" href="Ordencompra"><span>Orden de
-                compra</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                    d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zM8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5V8z" />
-            </svg>
-        </a>
-        <label></label>
-      
-    </div>
-    <label></label>
 
-  
+        <div class="card">
+            
 
-
-
-
-    <div class="card-header justify-content-center text-center bg-Comprascolor shadow">
-        <h3 class="card-title">
-            Compras
-            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-shop"
-                viewBox="0 0 16 16">
-                <path
-                    d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z" />
-            </svg>
-        </h3>
-    </div>
-    <hr>
-
-    <div class="card-body shadow">
-
-        <div class="row">
-
-            @*...................... Fecha ......................*@
-
-            <div class="form-group col-3">
-                <label>Fecha</label>
-                <InputDate @bind-Value="articulo.FechaCreacion" class="form-control bg-fechasColor" disabled ="true"/>
-            </div>
-
-
-            @*...................... Nombre ......................*@
-
-            <div class="form-group col-3">
-                <label>Nombre</label>
-                <InputText @bind-Value="articulo.Nombre" placeholder="Nombre articulo" class="form-control" disabled ="true" />
-                <ValidationMessage For="@(() => articulo.Nombre)" />
-
-            </div>
-
-            @*...................... Categoria ......................*@
-
-            <div class="form-group col-3">
-                <label>
-                    Categoria
-                    <div class="oi oi-sort-ascending"></div>
-                </label>
-                <InputSelect @bind-Value="articulo.CategoriaId" class="form-select text-14" disabled ="true">
-                    <option value="0" disabled selected>Seleccione una categoria</option>
-                    @foreach (var item in CategoriaList)
-                    {
-                        <option value="@item.CategoriaId">@item.Descripcion</option>
-                    }
-                </InputSelect>
-                <ValidationMessage For="@(() => articulo.CategoriaId)" />
-            </div>
-
-            <div class="form-group col-md-3">
-                <label>
-                    Suplidor
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                        class="bi bi-truck" viewBox="0 0 16 16">
+            <div class="card-header">
+                <h3 class="card-title">
+                     Compras
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                        class="bi bi-shop" viewBox="0 0 16 16">
                         <path
-                            d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+                            d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z" />
                     </svg>
-                </label>
-                <InputSelect @bind-Value ="articulo.SuplidorId" class="form-select text-14" disabled ="true">
-                    <option value="0" disabled selected>Seleccione un suplidor</option>
-                    @foreach (var item in SuplidorList)
-                    {
-                        <option value="@item.SuplidorId">@item.Nombre </option>
-                    }
-                </InputSelect>
-                <ValidationMessage For="@(() => articulo.SuplidorId)" />
+                </h3>
+            </div>
+
+            <div class="card-body">
+                <div class="input-group d-flex align-items-end">
                 <br>
-            </div>
-        </div>
 
+                @*...................... Fecha ......................*@
+                <div class="row">
 
+                    <div class="form-group col-5">
+                        <label>Fecha</label>
+                        <InputDate @bind-Value="compra.Fecha" class="form-control col-8 bg-fechasColor" disabled ="true" />
+                   
+                    </div>   
+                                
+                    <div class="form-group col-7">
+                        <label>Estado</label>
+                        <select @bind="EstadoSeleccionado" class="form-select text-14" @onfocusout="ObtenerEstado">
+                            <option value="0" disabled selected>Seleccionar</option>
+                            @foreach (var item in EstadoCompraList)
+                            {
+                                <option value="@item.EstadoCompraId">@item.EstadoDeCompra</option>
+                            }
+                        </select>
+                    </div>   
+                      </div>
+                      
+                    
+                 
+                    <button type="button" class="btn btn-lg btn-success" @onclick="Autorizar"
+                    style="position: absolute;  right:630px; margin-right: 30; "
+                            title="Autorizar compra"><label>Autorizarㅤ</label><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check-square-fill" viewBox="0 0 16 16">
+  <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z"/>
+</svg>
+                                       </button>     
+                </div>  
+                 </div>    
+                 
+                 
+                
+               
+             
 
-        <div class="row">
-
-            @*...................... Cantidad ......................*@
-
-            <div class="form-group col-3">
-                <label>Cantidad</label>
-                <InputNumber @bind-Value="articulo.CantidadComprada" class="form-control" disabled ="true"/>
-                <ValidationMessage For="@(() => articulo.CantidadComprada)" />
-            </div>
-
-
-            <div class="form-group col-3">
-                <label>Costo / Unidad</label>
-                <InputNumber @bind-Value="articulo.Costo" class="form-control" disabled ="true"/>
-
-            </div>
-
-            @*...................... Precio ......................*@
-
-            <div class="form-group col-3">
-                <label>Precio</label>
-                <InputNumber @bind-Value="articulo.Precio" class="form-control" disabled ="true"/>
-                <ValidationMessage For="@(() => articulo.Precio)" />
                 <br>
-            </div>
+                <table class="table table-light table-striped">
+                    <thead class="thead">
+                        <tr class="table text-center bg-ordendecompra2">
+                            <th class="border border-3"># Orden</th>
 
-        </div>
+                            <th class="border border-3">Producto</th>
 
-            </div>
-           
-       
+                            <th class="border border-3">Cantidad Comprada</th>
+
+                            <th class="border border-3">Costo RD $</th>
+
+                            <th class="border border-3">Importe RD $</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        
+                        @if (compra.compraDetalle is not null)
+                        {
+                            
+                            @foreach (CompraDetalle item in compra.compraDetalle)
+                            {
+                                
+                                <tr class="text-center">
+                                    <td>000-@item.ArticuloId</td>
+                                    <td>@item.NombreDetalle</td>
+                                    <td>@item.CantidadDetalle</td>
+                                    <td>@item.PrecioDetalle</td>
+                                    <td>@item.ImporteDetalle</td>
+                                   
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+                <hr>
+
+                
+
+                
+
+                    
+
+                    @*...................... Subtotal ......................*@
+           <div class="row">
+                    <div class="form-group col-md-2">
+                        <label>SubTotal</label>
+                        <InputNumber @bind-Value="compra.SubTotal" class="form-control col" readOnly="true" />
+                    </div>
+                    <br>
+
+                    @*...................... ITBIS ......................*@
+
+                    <div class="form-group col-md-2">
+                        <label>ITBIS</label>
+                        <InputNumber @bind-Value="compra.ITBIS" class="form-control col" readOnly="true" />
+                    </div>
+                    <br>
+
+                    @*...................... Total ......................*@
+
+                    <div class="form-group col-md-2">
+                        <label>Total</label>
+                        <InputNumber @bind-Value="compra.Total" class="form-control col" readOnly="true" />
+                    </div>
+                
+            
+
+              
+                @*...................... Pago Obtenido ......................*@
+             
+                
+                    <div class="form-group col-2">
+                        <label>Pago Obtenido</label>
+                        <InputNumber @bind-Value="compra.PagoObtenido" 
+                            class="form-control" disabled ="true"/>
+                    </div>
+
+                    @*...................... Devuelta ......................*@
+
+                    <div class="form-group col-md-2">
+                        <label>Devuelta</label>
+                        <InputNumber @bind-Value="compra.MontoRestante" class="form-control col-5" readOnly="true" />
+                    
+                    </div>
+
+                    <div class="form-group col-md-2 ">
+                        <label>Estado</label>
+                        <InputText @bind-Value="compra.EstadoDeLaCompra" class="form-control bg-estadoVenta" readOnly="true" />
+                    <br>
+                    </div>
+                   
+                </div>
+                </div>
+               
+               </div>
+                
+                
+            
         
-    
-
+   
 </EditForm>
 
 @code {
 
 #nullable disable // Para quitar el aviso de nulls
 
-    Articulo articulo = new Articulo();
-
-    Suplidor suplidor = new Suplidor();
-
     [Parameter]
-    public int ArticuloId { get; set; }
+    public int CompraId { get; set; }
 
-    [Inject]
-    public CategoriaBLL categoriaBLL { get; set; } // Inyectando BLLS
+    public int EstadoSeleccionado { get; set; }
+ 
 
-    [Inject]
-    public ArticuloBLL articuloBLL { get; set; } // Inyectando BLL
-
-    [Inject]
-    public SuplidorBLL suplidorBLL { get; set; } // Inyectando BLL
-
-    List<Categoria> CategoriaList = new List<Categoria>();
+    //-----------------------------------------------------------------------
+    Compra compra = new Compra();
+    CompraDetalle Detalle = new CompraDetalle();
+    Articulo articulo = new Articulo();
+    Suplidor suplidor = new Suplidor();
 
     List<Suplidor> SuplidorList = new List<Suplidor>();
 
+    List<Articulo> ArticuloList = new List<Articulo>();
+
+    List<EstadoCompra> EstadoCompraList = new List<EstadoCompra>();
 
     //-----------------------------------------------------------------------
 
+    [Inject]
+    public CompraBLL compraBLL { get; set; }
+
+    [Inject]
+    public ArticuloBLL articuloBLL { get; set; } // Inyectando BLLS
+
+    [Inject]
+    public SuplidorBLL suplidorBLL { get; set; }
+
+    [Inject]
+    public PagoBLL pagoBLL { get; set; }
+
+    [Inject]
+    public EstadoCompraBLL estadoCompraBLL { get; set; }
+
+
+    //-------------------------------------------------------------------------
+
     protected override void OnInitialized()
     {
-        articulo = new Articulo();
-        suplidor = new Suplidor();
-        CategoriaList = categoriaBLL.GetList(c => true);
-        SuplidorList = suplidorBLL.GetList(c => true);
+     
+        ArticuloList = articuloBLL.GetList(p => true);
+        SuplidorList = suplidorBLL.GetList(p => true);
+        EstadoCompraList = estadoCompraBLL.GetList(p => true);
 
-        if (ArticuloId > 0)
+        if (CompraId > 0)
         {
-            articulo.ArticuloId = ArticuloId;
+            compra.CompraId = CompraId;
             this.Buscar();
+            
+        }
+    }
+
+     private void ObtenerEstado() // Metodos de pago
+    {
+        switch (EstadoSeleccionado)
+        {
+            case 1:
+                compra.EstadoDeLaCompra = "En Espera"; 
+
+                break;
+
+            case 2:
+                
+                compra.EstadoDeLaCompra = "Solicitado";
+
+                break;
+
+            case 3:
+                compra.EstadoDeLaCompra = "Finalizado";
+
+                break;
         }
     }
 
 
 
-    public void Buscar() // Buscar articulo
+
+    protected void Buscar() // Buscar compras registradas
     {
-        if (this.articulo.ArticuloId > 0)
+        if (this.compra.CompraId > 0)
         {
-            var Articulo = articuloBLL.Buscar(articulo.ArticuloId);
+            var Compra = compraBLL.Buscar(this.compra.CompraId);
 
-            if (Articulo != null)
-            {
-                articulo = Articulo;
+            if (Compra != null )
+            { 
+                compra = Compra;
+               
 
-                Toast.ShowSuccess($"Articulo: {articulo.Nombre}, encontrado ");
+                Toast.ShowSuccess($"Compra : {compra.CompraId}, encontrada");
+                
             }
             else
             {
-                Toast.ShowWarning($"No existe un articulo con este Id: {articulo.ArticuloId}");
+                Toast.ShowWarning($"Id : {compra.CompraId}, no esta registrado");
             }
         }
     }
+
+    public void Autorizar() // Guardar compra
+    {
+         if (EstadoSeleccionado == 0)
+        {
+            Toast.ShowWarning("Seleccione el estado de la compra");
+            return;
+        }
+
+        bool guardado;
+ 
+
+        guardado = compraBLL.Guardar(compra);
+
+        if (guardado)
+        {
+            guardado = true;
+
+            Toast.ShowSuccess("Compra autorizada");
+        }
+        else
+            Toast.ShowError("No fue posible la autorizacion");
+    }
+
+
 
 }
