--- a/Pages/Consultas/ConsultarVentas.razor
+++ b/Pages/Consultas/ConsultarVentas.razor
@@ -11,7 +11,7 @@
 
 @using ProyectoFinal.BLL;
 
-<EditForm Model="venta">
+<EditForm Model="venta" OnValidSubmit="Autorizar">
     <DataAnnotationsValidator />
 
     
@@ -38,17 +38,46 @@
             </div>
 
             <div class="card-body">
+                <div class="input-group d-flex align-items-end">
                 <br>
 
                 @*...................... Fecha ......................*@
                 <div class="row">
 
-                    <div class="form-group col-md-2">
+                    <div class="form-group col-5">
                         <label>Fecha</label>
                         <InputDate @bind-Value="venta.Fecha" class="form-control col-8 bg-fechasColor" disabled ="true" />
-                    </div>                  
+                   
+                    </div>   
+                                
+                    <div class="form-group col-7">
+                        <label>Estado</label>
+                        <select @bind="EstadoSeleccionado" class="form-select text-14" @onfocusout="ObtenerEstado">
+                            <option value="0" disabled selected>Seleccionar</option>
+                            @foreach (var item in EstadoVentaList)
+                            {
+                                <option value="@item.EstadoVentaId">@item.EstadoDeVenta</option>
+                            }
+                        </select>
+                    </div>   
+                      </div>
+                      
                     
-                </div>
+                 
+                    <button type="button" class="btn btn-lg btn-success" @onclick="Autorizar"
+                    style="position: absolute;  right:630px; margin-right: 30; "
+                            title="Autorizar venta"><label>Autorizarㅤ</label><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check-square-fill" viewBox="0 0 16 16">
+  <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z"/>
+</svg>
+                                       </button>     
+                </div>  
+                 </div>    
+                 
+                 
+                
+               
+             
+
                 <br>
                 <table class="table table-light table-striped">
                     <thead class="thead">
@@ -132,15 +161,23 @@
                     <div class="form-group col-md-2">
                         <label>Devuelta</label>
                         <InputNumber @bind-Value="venta.MontoRestante" class="form-control col-5" readOnly="true" />
-                    </div>
                     
-                </div>
-                </div>
-                </div>
-                <br>
+                    </div>
 
+                    <div class="form-group col-md-2 ">
+                        <label>Estado</label>
+                        <InputText @bind-Value="venta.EstadoDeLaVenta" class="form-control bg-estadoVenta" readOnly="true" />
+                    <br>
+                    </div>
+                   
+                </div>
+                </div>
+               
+               </div>
+                
+                
             
-        </div>
+        
    
 </EditForm>
 
@@ -151,10 +188,8 @@
     [Parameter]
     public int VentaId { get; set; }
 
-    public float cantidad { get; set; }
-
+    public int EstadoSeleccionado { get; set; }
  
-
 
     //-----------------------------------------------------------------------
     Ventas venta = new Ventas();
@@ -165,6 +200,8 @@
     List<Clientes> ClienteList = new List<Clientes>();
 
     List<Articulo> ArticuloList = new List<Articulo>();
+
+    List<EstadoVenta> EstadoVentaList = new List<EstadoVenta>();
 
     //-----------------------------------------------------------------------
 
@@ -180,6 +217,9 @@
     [Inject]
     public PagoBLL pagoBLL { get; set; }
 
+    [Inject]
+    public EstadoVentaBLL estadoVentaBLL { get; set; }
+
 
     //-------------------------------------------------------------------------
 
@@ -188,12 +228,35 @@
      
         ArticuloList = articuloBLL.GetList(p => true);
         ClienteList = clienteBLL.GetList(p => true);
+        EstadoVentaList = estadoVentaBLL.GetList(p => true);
 
         if (VentaId > 0)
         {
             venta.VentaId = VentaId;
             this.Buscar();
             
+        }
+    }
+
+     private void ObtenerEstado() // Metodos de pago
+    {
+        switch (EstadoSeleccionado)
+        {
+            case 1:
+                venta.EstadoDeLaVenta = "En Espera"; 
+
+                break;
+
+            case 2:
+                
+                venta.EstadoDeLaVenta = "Solicitado";
+
+                break;
+
+            case 3:
+                venta.EstadoDeLaVenta = "Finalizado";
+
+                break;
         }
     }
 
@@ -221,7 +284,28 @@
         }
     }
 
-    
+    public void Autorizar() // Guardar venta
+    {
+         if (EstadoSeleccionado == 0)
+        {
+            Toast.ShowWarning("Seleccione el estado de la venta");
+            return;
+        }
+
+        bool guardado;
+ 
+
+        guardado = ventaBLL.Guardar(venta);
+
+        if (guardado)
+        {
+            guardado = true;
+
+            Toast.ShowSuccess("Venta autorizada");
+        }
+        else
+            Toast.ShowError("No fue posible la autorizacion");
+    }
 
 
 
