--- a/Pages/Consultas/Reporte_Suplidores.razor
+++ b/Pages/Consultas/Reporte_Suplidores.razor
@@ -75,8 +75,7 @@
         <tbody>
             @if (lista.Count == 0)
             {
-                <p />
-                <span>Empty</span>
+                <td class="bg-colornohay">ㅤNo hay suplidores registrados !</td>
             }
             else
             {
