--- a/Pages/Registros/OrdenDeCompra.razor
+++ b/Pages/Registros/OrdenDeCompra.razor
@@ -53,7 +53,9 @@
                             <option value="0" disabled selected>Seleccione un suplidor</option>
                             @foreach (Suplidor item in SuplidorList)
                             {
+                                
                                 <option value="@item.SuplidorId">@item.Nombre </option>
+                                
                             }
                         </select>
                     </div>
@@ -74,9 +76,9 @@
                             <option value="0" disabled selected> Seleccione un articulo </option>
                             @foreach (Articulo item in ArticuloList)
                             {
-                                
+                                if (item.Precio < 1 && item.CantidadRegistrada > 0){
                                     <option value="@item.ArticuloId">@item.Nombre</option>
-                                
+                                }
 
                             }
                         </select>
@@ -216,7 +218,19 @@
                         <InputNumber @bind-Value="compra.MontoRestante" class="form-control col-5" readOnly="true" />
                     </div>
                 
-                 
+                 <div class="form-group col-md-3" style="margin: auto;">
+                    <a class="rz-border-radius-4 shadow border border-1 btn btn-lg btn btn-primary"
+                        data-toggle="tooltip" data-placement="right" title="Ingresar al reporte de compras"
+                        href="reportecompras"
+                        style="position: absolute;  right:40px; margin-right: 30; "
+                       <label>Compras</label>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                            class="bi bi-shop" viewBox="0 0 16 16">
+                            <path
+                                d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z" />
+                        </svg>
+                    </a>
+                </div>
            
                 </div>
                 <br>
@@ -356,6 +370,7 @@
         if (auxArticulo != null)
         {
             articulo.CantidadComprada = Detalle.CantidadDetalle;
+            
         }
     }
 
@@ -385,7 +400,7 @@
 
             case 2:
                 // El pago lo podra ingresar la persona
-                compra.PagoObtenido = 0;
+                compra.PagoObtenido = compra.PagoObtenido;
 
                 break;
 
@@ -441,6 +456,7 @@
         ObtenerDevuelta();
         ActualizandoUnidadesArticulo();
         ObtenerPago();
+        compra.UnidadesVendidas = Detalle.CantidadDetalle;
         
 
         guardado = compraBLL.Guardar(compra);
