--- a/Pages/Registros/R_Articulos.razor
+++ b/Pages/Registros/R_Articulos.razor
@@ -93,7 +93,11 @@
 
                 <div class="row">
 
-                  
+                  <div class="form-group col-3">
+                        <label>Cantidad</label>
+                        <InputNumber @bind-Value="articulo.CantidadRegistrada" class="form-control" readOnly="true"/>
+                        <br>
+                    </div>
 
                     <div class="form-group col-3">
                         <label>Costo / Unidad</label>
